kubernetes-monitoring/nginx/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-with-status
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
spec:
  type: ClusterIP
  selector:
    app: nginx-with-status
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 9113
      targetPort: 9113
      protocol: TCP
      name: metrics
