kubernetes-monitoring/nginx/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-with-status
spec:
  rules:
    - host: status.nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-with-status
                port:
                  name: http
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: nginx-with-status
                port:
                  name: metrics
